[package]
name = "snake-3d-re"
version = "0.1.0"
authors = ["cynic64 <f3bl@gmx.com>"]
edition = "2018"

[dependencies]
# render-engine = { path = "../render-engine" }
render-engine = { git = "https://github.com/cynic64/render-engine", rev = "585e2fef8e892b37f2d3bdc772e62f51ceac63b3" }
nalgebra-glm = "0.4"
rand = "0.7"
