[package]
name = "snake-3d-re"
version = "0.1.0"
authors = ["cynic64 <f3bl@gmx.com>"]
edition = "2018"

[dependencies]
# render-engine = { path = "../render-engine" }
render-engine = { git = "https://github.com/cynic64/render-engine", rev = "2492bc7ad5a5e1db0d8b7a646212fb291c38e0b4" }
nalgebra-glm = "0.4"
rand = "0.7"
