[package]
name = "snake-3d-re"
version = "0.1.0"
authors = ["cynic64 <f3bl@gmx.com>"]
edition = "2018"

[dependencies]
# render-engine = { path = "../render-engine" }
render-engine = { git = "https://github.com/cynic64/render-engine", rev = "5577128e3e2c67569787b0e78faefda2d81c3cc3" }
nalgebra-glm = "0.4"
rand = "0.7"
